--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ aux_links:
 
 repository: itsneufox/itsneufox.github.io
 
-logo: "/assets/images/logo-coloured.webp"
+logo: "/assets/images/logo-coloured.png"
