--- a/_config.yml
+++ b/_config.yml
@@ -5,21 +5,22 @@ theme: just-the-docs
 
 # URL settings
 url: "https://itsneufox.github.io"
+baseurl: ""
 
 # Repository settings
 repository: itsneufox/itsneufox.github.io
+permalink: pretty
 
 # Logo
 logo: "/assets/images/logo-coloured.png"
 
 # Search settings
 search_enabled: true
-
 search:
   heading_level: 2
-  previews: 3
-  preview_words_before: 5
-  preview_words_after: 10
+  previews: 2
+  preview_words_before: 3
+  preview_words_after: 3
   tokenizer_separator: /[\s/]+/
   rel_url: true
   button: false
@@ -27,6 +28,11 @@ search:
 
 # Navigation settings
 nav_enabled: true
+nav_sort: case_sensitive
+nav_error_report: true
+
+# Code settings
+enable_copy_code_button: true
 
 # Heading anchor links
 heading_anchors: true
@@ -34,17 +40,11 @@ heading_anchors: true
 # Color scheme
 color_scheme: dark
 
-# Auxiliary links
-aux_links:
-  Template Repository: 
-    url: https://github.com/just-the-docs/just-the-docs-template
-    icon: fa-solid fa-code-branch
-
 # Build settings
 markdown: kramdown
 highlighter: rouge
 
-# Plugins (optional)
+# Plugins
 plugins:
   - jekyll-seo-tag
   - jekyll-feed
@@ -56,3 +56,28 @@ exclude:
   - Gemfile.lock
   - node_modules
   - vendor
+
+# Footer settings
+back_to_top: true
+back_to_top_text: "Back to top"
+footer_content: "Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a> <a href=\"https://www.netlify.com/\">This site is powered by Netlify.</a>"
+last_edit_timestamp: true
+last_edit_time_format: "%b %e %Y at %I:%M %p"
+
+# Callouts settings
+callouts_level: quiet
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
