--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@ theme: just-the-docs
 
 # URL settings
 url: "https://itsneufox.github.io"
-baseurl: ""
 
 # Repository settings
 repository: itsneufox/itsneufox.github.io
@@ -60,7 +59,7 @@ exclude:
 # Footer settings
 back_to_top: true
 back_to_top_text: "Back to top"
-footer_content: "Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a> <a href=\"https://www.netlify.com/\">This site is powered by Netlify.</a>"
+footer_content: "Copyright &copy; 2024 itsneufox."
 last_edit_timestamp: true
 last_edit_time_format: "%b %e %Y at %I:%M %p"
 
