--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,22 @@ nav_enabled: true
 nav_sort: case_sensitive
 nav_error_report: true
 
+# Navigation for open.mp guide
+primary_navigation:
+  - name: open.mp Server Deploy
+    link: /openmp-server-deploy/introduction/
+    children:
+      - name: Introduction
+        link: /openmp-server-deploy/introduction/
+      - name: Part A - Connect, Update, and Create User
+        link: /openmp-server-deploy/part-a/
+      - name: Part B - Download and Install Server Files
+        link: /openmp-server-deploy/part-b/
+      - name: Part C - Finishing Up and Starting the Server
+        link: /openmp-server-deploy/part-c/
+      - name: Part D - Uploading Your Own Gamemode and Files
+        link: /openmp-server-deploy/part-d/
+
 # Code settings
 enable_copy_code_button: true
 
